# quizme-fast-api

./: CLEANUP_GUIDE.md  CLEANUP_REFERENCE.md  QUICKSTART.md  RAG_MCQ_GUIDE.md  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy.yml
api-service/: main.py
api-service/src/service/: processFile.py
src/: chatAndUploadService.py
src/controller/: uploadFile.py
src/models/: llama3.py
src/service/: prepareMCQ.py  processFile.py  qdrantApi.py  qdrantApiService.py  qdrantService.py  rag.py
