[project]
name = "quizme-fast-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.134.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-qdrant>=1.1.0",
    "pymupdf>=1.27.1",
    "python-decouple>=3.8",
    "qdrant-client>=1.17.0",
    "sentence-transformers>=5.2.3",
    "langchain>=1.2.10",
    "python-dotenv>=1.2.1",
]
